--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
-.App {
+.App{
+  min-height: 100vh;
   text-align: center;
+  background-color: #323844;
+  color: aliceblue;
+
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -14,8 +18,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +38,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
