functinolity and styles added

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App{
   min-height: 100vh;
   text-align: center;
-  background-color: #323844;
+  background-color: #e4f9f5;
   color: aliceblue;
 
 }
