--- a/src/components/Expenses.css
+++ b/src/components/Expenses.css
@@ -1,7 +1,7 @@
 
 .Expenses{
 
-    background-color: #4ea52c;
+    background-color: #2fa78d;
     width: 80%;
     margin: auto;
     /* box-shadow: 10px 20px 60px rgb(93, 111, 122);
